# sec-edgar-rag

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh  sic_cache.json
chroma_db/: chroma.sqlite3
chroma_db/82bf1507-34b8-478f-95d7-c2652c954637/: index_metadata.pickle
docs/: final_pres_eliza.pptx
docs/prompt_tests/claude/: 01_risk_factors_apple_tesla_jpmorgan.md  02_nvidia_revenue_growth.md  03_pharma_regulatory_risks.md
docs/prompt_tests/openai/: 01_risk_factors_apple_tesla_jpmorgan.md  02_nvidia_revenue_growth.md  03_pharma_regulatory_risks.md
scripts/: build_index.py  query.py
src/enterprise/: audit.py  auth.py
src/pipeline/: chunker.py  embeddings.py  index.py  preprocess.py
src/query/: llm.py  prompt.py  rag.py  retriever.py
src/ui/: app.py
src/utils/: sector_lookup.py
